# labs-input-viewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HDMI-viewer.py  LICENSE  Makefile  NOTICE  README.md  TESTING.md  TODO.md  confluence.md  hdmi-viewer.spec  input-viewer.spec  mock_sources.py  pyproject.toml  settings.json
.claude/: CLAUDE.md  DEVELOPMENT.md
.claude/commands/: new-feature.md  pr.md  release.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
assets/: README.md
docs/: USER_GUIDE.md
hdmi_viewer/: ARCHITECTURE.md  __init__.py  __main__.py  camera.py  config.py  detection.py  log.py  utils.py  viewer.py  worker.py
hdmi_viewer/widgets/: __init__.py  audio_panel.py  base.py  overlays.py  settings_panel.py  thumbnails.py  toggle_switch.py
hdmi_viewer_mock/: __init__.py  __main__.py  config.py  patterns.py  server.py  ui.py
input_viewer/: __main__.py  detection.py  log.py  worker.py
input_viewer_electron/: .gitignore  README.md  electron.vite.config.mjs  package-lock.json  package.json  vite.preview.config.mjs
input_viewer_mock/: __init__.py  __main__.py  ui.py
input_viewer_python/: README.md  TESTING.md  input-viewer.py  pyproject.toml
input_viewer_python/input_viewer/: ARCHITECTURE.md  __init__.py  camera.py  config.py  utils.py  viewer.py
input_viewer_python/input_viewer/widgets/: overlays.py
input_viewer_python/input_viewer_mock/: config.py  server.py
input_viewer_python/scripts/: create_icons.py
remote_keyboard/: source.ino
scripts/: test_detection.py
spikes/: dropdown-design.html  no-signal-design.html
tests/: __init__.py  test_hdmi_viewer.py  test_input_viewer.py
(+32 files in other folders)
