[project]
name = "input-viewer"
version = "1.3.1"
description = "A lightweight video input viewer - OBS without the complexity. View and manage capture card feeds with a clean, simple interface."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Labs for Space" }
]
keywords = ["video", "capture", "viewer", "pyqt6", "obs", "streaming", "display"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Display",
]

dependencies = [
    "PyQt6>=6.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.1.0",
]
mock = [
    "pyvirtualcam>=0.10.0",
]

[project.scripts]
input-viewer = "input_viewer:main"
input-mock = "input_viewer_mock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["input_viewer", "input_viewer_mock"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
